--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,11 +1,12 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.duan.duan.DCZ_fragment.BFragment">
+    tools:context="com.example.duan.duan.DCZ_activity.LoginActivity">
     <RelativeLayout
         style="@style/Title"
-        android:background="@color/bg_title">
+        android:background="@color/colorPrimaryDark">
         <include
             android:id="@+id/back"
             layout="@layout/layout_back" />
@@ -13,7 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="安全中心"
+            android:text="登录"
             android:textColor="@color/white"
             android:textSize="@dimen/title" />
     </RelativeLayout>
