--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="text_lv">#9fd1f7</color>
     <color name="xian1">#b2b2b2</color>
     <color name="white">#FFFFFF</color>
+    <color name="bg_title">#333333</color>
 </resources>
