--- a/app/src/main/res/layout/fragment_a.xml
+++ b/app/src/main/res/layout/fragment_a.xml
@@ -13,37 +13,44 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </com.jcodecraeer.xrecyclerview.XRecyclerView>
-    <RelativeLayout
-        style="@style/Title"
-        android:background="@color/bg_title">
-        <include
-            android:id="@+id/back"
-            layout="@layout/layout_back" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="账户安全管家"
-            android:textColor="@color/white"
-            android:textSize="@dimen/title" />
-    </RelativeLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:background="@color/text_lv"
+        android:layout_weight="1">
+        <RelativeLayout
+            style="@style/Title"
+            android:layout_marginTop="20dp">
+            <include
+                android:id="@+id/back"
+                layout="@layout/layout_back" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="账户安全管家"
+                android:textColor="@color/title"
+                android:textSize="@dimen/title" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="0.1dp"
+                android:background="@color/white"
+                android:layout_marginLeft="22dp"
+                android:layout_marginRight="22dp"
+                android:layout_alignParentBottom="true"/>
+        </RelativeLayout>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:padding="10dp"
-            android:layout_weight="1">
+            android:layout_height="match_parent"
+            android:padding="10dp">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center_horizontal"
                 android:paddingTop="20dp"
                 android:paddingBottom="20dp"
-                android:orientation="vertical"
-                android:background="@color/white">
+                android:orientation="vertical">
                 <com.facebook.drawee.view.SimpleDraweeView
                     android:layout_width="100dp"
                     android:layout_height="100dp"
@@ -63,6 +70,12 @@
                     android:text="账户暂无安全风险"/>
             </LinearLayout>
         </LinearLayout>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -72,8 +85,6 @@
                 android:layout_width="match_parent"
                 android:gravity="center_vertical"
                 android:background="@color/white"
-                android:paddingTop="15dp"
-                android:paddingBottom="15dp"
                 android:layout_height="0dp"
                 android:layout_weight="1">
                 <ImageView
@@ -90,30 +101,45 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/text05"
+                        android:textSize="@dimen/text01"
                         android:text="我的足迹"/>
+
                     <TextView
+                        android:id="@+id/textView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="当前3处登录 上次登录广东深圳"/>
+                        android:textColor="@color/text06"
+                        android:textSize="@dimen/text02"
+                        android:text="当前3处登录 上次登录广东深圳" />
                 </LinearLayout>
                 <View
                     android:layout_width="0dp"
                     android:layout_height="1dp"
                     android:layout_weight="1">
                 </View>
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginRight="10dp"
-                    android:src="@mipmap/t1r"/>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical">
+                    <ImageView
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:layout_marginRight="@dimen/right"
+                        android:visibility="gone"
+                        android:src="@mipmap/t1r" />
+                    <ImageView
+                        android:layout_width="15dp"
+                        android:layout_height="15dp"
+                        android:layout_marginRight="@dimen/left"
+                        android:src="@mipmap/t1r" />
+                </LinearLayout>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:gravity="center_vertical"
                 android:background="@color/white"
                 android:layout_marginTop="2dp"
-                android:paddingTop="15dp"
-                android:paddingBottom="15dp"
                 android:layout_height="0dp"
                 android:layout_weight="1">
                 <ImageView
@@ -130,30 +156,45 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="我的足迹"/>
+                        android:textColor="@color/text05"
+                        android:textSize="@dimen/text01"
+                        android:text="密码安全"/>
+
                     <TextView
+                        android:id="@+id/textView2"
+                        android:textColor="@color/text06"
+                        android:textSize="@dimen/text02"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="当前3处登录 上次登录广东深圳"/>
+                        android:text="正在检测密码安全情况" />
                 </LinearLayout>
                 <View
                     android:layout_width="0dp"
                     android:layout_height="1dp"
                     android:layout_weight="1">
                 </View>
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginRight="10dp"
-                    android:src="@mipmap/t1r"/>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical">
+                    <ImageView
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:layout_marginRight="@dimen/right"
+                        android:visibility="gone"
+                        android:src="@mipmap/t1r" />
+                    <ImageView
+                        android:layout_width="15dp"
+                        android:layout_height="15dp"
+                        android:layout_marginRight="@dimen/left"
+                        android:src="@mipmap/t1r" />
+                </LinearLayout>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:gravity="center_vertical"
                 android:background="@color/white"
                 android:layout_marginTop="2dp"
-                android:paddingTop="15dp"
-                android:paddingBottom="15dp"
                 android:layout_height="0dp"
                 android:layout_weight="1">
                 <ImageView
@@ -170,22 +211,37 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="我的足迹"/>
+                        android:textColor="@color/text05"
+                        android:textSize="@dimen/text01"
+                        android:text="密保手机"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="当前3处登录 上次登录广东深圳"/>
+                        android:textColor="@color/text06"
+                        android:textSize="@dimen/text02"
+                        android:text="已绑定密保手机132****8723"/>
                 </LinearLayout>
                 <View
                     android:layout_width="0dp"
                     android:layout_height="1dp"
                     android:layout_weight="1">
                 </View>
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginRight="10dp"
-                    android:src="@mipmap/t1r"/>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical">
+                    <ImageView
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:layout_marginRight="@dimen/right"
+                        android:visibility="gone"
+                        android:src="@mipmap/t1r" />
+                    <ImageView
+                        android:layout_width="15dp"
+                        android:layout_height="15dp"
+                        android:layout_marginRight="@dimen/left"
+                        android:src="@mipmap/t1r" />
+                </LinearLayout>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -193,8 +249,6 @@
                 android:background="@color/white"
                 android:layout_marginTop="2dp"
                 android:layout_marginBottom="2dp"
-                android:paddingTop="15dp"
-                android:paddingBottom="15dp"
                 android:layout_height="0dp"
                 android:layout_weight="1">
                 <ImageView
@@ -211,22 +265,37 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="我的足迹"/>
+                        android:textColor="@color/text05"
+                        android:textSize="@dimen/text01"
+                        android:text="安全保护"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="当前3处登录 上次登录广东深圳"/>
+                        android:textColor="@color/text06"
+                        android:textSize="@dimen/text02"
+                        android:text="已开启三类保护"/>
                 </LinearLayout>
                 <View
                     android:layout_width="0dp"
                     android:layout_height="1dp"
                     android:layout_weight="1">
                 </View>
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginRight="10dp"
-                    android:src="@mipmap/t1r"/>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical">
+                    <ImageView
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:layout_marginRight="@dimen/right"
+                        android:visibility="gone"
+                        android:src="@mipmap/t1r" />
+                    <ImageView
+                        android:layout_width="15dp"
+                        android:layout_height="15dp"
+                        android:layout_marginRight="@dimen/left"
+                        android:src="@mipmap/t1r" />
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
