--- a/app/src/main/res/layout/layout_back.xml
+++ b/app/src/main/res/layout/layout_back.xml
@@ -8,9 +8,9 @@
     android:clickable="true"
     android:id="@+id/back_btn">
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:src="@mipmap/ic_launcher_round"
         android:scaleType="fitCenter"
-        android:layout_marginLeft="10dp"/>
+        android:layout_marginLeft="@dimen/left"/>
 </LinearLayout>
