--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,14 +12,28 @@
     <color name="ksw_md_solid_disable">#FFFFFF</color>
     <color name="ksw_md_solid_checked_disable">#aaaaaa</color>
 
+    <color name="percent_text_color_default">#009ACD</color>
+    <color name="percent_text_color">#3CB371</color>
+    <color name="percent_text_color_2">#A2CD5A</color>
+    <color name="progressbar_bg_color_default">#636363</color>
+    <color name="progress_color_default">#00C5CD</color>
+    <color name="progressbar_bg_color_1">#737373</color>
+    <color name="progress_color_1">#3CB371</color>
+    <color name="bg">#CDB5CD</color>
+
     <color name="alpha">#000000</color>
     <color name="text01">#333333</color>
     <color name="text02">#999999</color>
     <color name="text03">#998b7c</color>
     <color name="text04">#c7c7c7</color>
+    <color name="text05">#303030</color><!--列表项标题-->
+    <color name="text06">#a2a2a2</color><!--列表项内容-->
+    <color name="text07">#366cf4</color>
     <color name="text_lv">#9fd1f7</color>
     <color name="xian1">#b2b2b2</color>
+    <color name="title">#fefefe</color>
     <color name="white">#FFFFFF</color>
     <color name="bg_title">#333333</color>
     <color name="bg1">#e4e4e4</color>
+    <color name="bg2">#f4f4f4</color>
 </resources>
